--- a/THANKS
+++ b/THANKS
@@ -57,3 +57,9 @@ important.
 
 I wish to thank the people who maintained a package for Jitter; I know of
 Darshit Shah, but there are others as well who would deserve a mention here.
+
+
+As of 2021 my employer, pEp Foundation, graciously allows me to spend some paid
+time working on free software including Jitter.  On pEp Foundation's time I:
+
+* ported Jitter to Android.
