--- a/THANKS
+++ b/THANKS
@@ -62,4 +62,5 @@ Darshit Shah, but there are others as well who would deserve a mention here.
 As of 2021 my employer, pEp Foundation, graciously allows me to spend some paid
 time working on free software including Jitter.  On pEp Foundation's time I:
 
-* ported Jitter to Android.
+* ported Jitter to Android;
+* improved ARM support.
