--- a/THANKS
+++ b/THANKS
@@ -63,4 +63,5 @@ As of 2021 my employer, pEp Foundation, graciously allows me to spend some paid
 time working on free software including Jitter.  On pEp Foundation's time I:
 
 * ported Jitter to Android;
-* improved ARM support.
+* improved ARM support;
+* greatly improved the Structured example: procedures, tail calls.
