--- a/doc/jitter.texi
+++ b/doc/jitter.texi
@@ -200,7 +200,9 @@ This is the manual for Jitter
 (version @value{VERSION},
 last updated on @value{UPDATED}), an efficient virtual machine generator.
 
-Copyright @copyright{} 2017, 2019, 2020, 2021  Luca Saiu.  Written by Luca Saiu.
+@noindent
+Copyright @copyright{} 2017, 2019, 2020, 2021  Luca Saiu.@*
+Written by Luca Saiu.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
@@ -5184,5 +5186,5 @@ Everything would remain thread-local, which is good.
 Local Variables:
   eval: (flyspell-mode t)
   eval: (ispell-change-dictionary "british")
-  compile-command: "bash -ci 'make -C ~/repos/jitter/_build/native-gcc-10 info pdf'"
+  compile-command: "bash -ci 'make -C ~/repos/jitter/_build/native-gcc-11 info pdf'"
 End:
