--- a/doc/missing-man-page.1
+++ b/doc/missing-man-page.1
@@ -1,5 +1,5 @@
 .\" This is -*- nroff -*-.
-.\" Stub man page for Jitter, to be used when help2man is not usable.
+.\" Stub man page for GNU Jitter, to be used when help2man is not usable.
 .\"
 .\" Copyright (C) 2017, 2019, 2021 Luca Saiu
 .\" Written by Luca Saiu
@@ -10,14 +10,14 @@
 .\" Version 1.3 or any later version published by the Free Software
 .\" Foundation; with no Invariant Sections, no Front-Cover Texts, and
 .\" no Back-Cover Texts.  A copy of the license is included in the
-.\" Jitter distribution as COPYING.DOC .
+.\" GNU Jitter distribution as COPYING.DOC .
 .\"
-.\" About Jitter:
-.\" Jitter is free software: you can redistribute it and/or modify
+.\" About GNU Jitter:
+.\" GNU Jitter is free software: you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
 .\" the Free Software Foundation, either version 3 of the License, or
 .\" (at your option) any later version.
-.\" Jitter is distributed in the hope that it will be useful,
+.\" GNU Jitter is distributed in the hope that it will be useful,
 .\" but WITHOUT ANY WARRANTY; without even the implied warranty of
 .\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 .\" GNU General Public License for more details.
@@ -31,13 +31,13 @@
 .TH JITTER 1
 
 .SH NAME
-Jitter \- an efficient Virtual Machine generator
+GNU Jitter \- an efficient Virtual Machine generator
 
 .SH DESCRIPTION
 Alas, there is not much information here.
 
 .SH THIS MAN PAGE IS A STUB
-The system on which the Jitter source tarball was built
+The system on which the GNU Jitter source tarball was built
 lacked the GNU help2man utility or used cross-compilation
 without an emulator available to run the produced file with
 \fB\-\-help\fR ;
@@ -95,4 +95,4 @@ Jitter distribution as \fBCOPYING.DOC\fR .
 .BR makeinfo(1)\fR,
 .BR texi2any(1)\fR,
 the Jitter web page at
-.BR http://ageinghacker.net/projects/jitter\fR
+.BR https://www.gnu.org/software/jitter\fR
