--- a/example-build-systems/NEWS
+++ b/example-build-systems/NEWS
@@ -1,8 +1,8 @@
 Copyright (C) 2017-2021 Luca Saiu
 Written by Luca Saiu
 
-This file is part of the Jitter build system examples, distributed
-along with GNU Jitter under the same license.
+This file is part of the GNU Jitter build system examples, distributed
+along with Jitter under the same license.
 
 GNU Jitter is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -18,4 +18,5 @@ You should have received a copy of the GNU General Public License
 along with GNU Jitter.  If not, see <http://www.gnu.org/licenses/>.
 
 
-News are not actually maintained for this trivial example.
+News are not actually maintained for these examples: see the NEWS file
+in the GNU Jitter source distribution instead.
