--- a/example-build-systems/README
+++ b/example-build-systems/README
@@ -1,8 +1,8 @@
 Copyright (C) 2017-2021 Luca Saiu
 Written by Luca Saiu
 
-This file is part of the Jitter build system examples, distributed
-along with GNU Jitter under the same license.
+This file is part of the GNU Jitter build system examples, distributed
+along with Jitter under the same license.
 
 GNU Jitter is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
