big rename of "dispatching mode", "threading model"...; other minor changes
While writing Jitter I initially said "threading model" or "threading mode"
(no-threading came next-to-last before switch, and initially every mode was
based on threading), then "dispatching model" or "dispatching mode".  Recent
code and documentation uses the shorter and simpler phrase "dispatch".
Adapt existing documentation and comments to the new convention.

This mostly affects comments and documentation, but also a few internal
identifiers.

One user-visible but backward-compatible change: new CPP macros
JITTER_BEST_DISPATCH_NAME_LOWER and JITTER_BEST_DISPATCH_NAME_UPPER.  The
configure infrastructure was already present.

One trivial build system correction, fixing distcheck by removing two temporary
files generated at configure time.
Update --help text for several programs, including the new Jitter home page URL
on gnu.org.
A few trivial build system new features.

* Makefile.am: Comments.
(lib_libjitter_la_LIBADD): Change dependecy from
lib/libjitter--$(JITTER_BEST_DISPATCHING_MODEL)--partial.la to
lib/libjitter--$(JITTER_BEST_DISPATCH)--partial.la.
(print-built-sources, print-jitter-generated-c-files, built-sources): New rules.
(generated-c-files): Rename to jitter-generated-c-files.  Change rule:
dependencies, body, comment.
(remove-man-pages): Re-enable rm command line in the body.

* README: Documentation.
* README-hacking: Documentation.
* doc/jitter.texi: Documentation.
* example-vms/jitterlisp/doc/jitterlisp.texi: Documentation.

* configure.ac: Comments, user strings.
(jitter_enabled_dispatch_models, jitter_best_dispatch_model): Rename shell
variables to jitter_enabled_dispatches, jitter_best_dispatch.
(JITTER_BEST_DISPATCHING_MODEL_IS_SWITCH)
(JITTER_BEST_DISPATCHING_MODEL_IS_DIRECT_THREADING)
(JITTER_BEST_DISPATCHING_MODEL_IS_MINIMAL_THREADING)
(JITTER_BEST_DISPATCHING_MODEL_IS_NO_THREADING): Rename to
JITTER_BEST_DISPATCH_IS_SWITCH, JITTER_BEST_DISPATCH_IS_DIRECT_THREADIN

--- a/README
+++ b/README
@@ -43,7 +43,7 @@ The generated C code is heavily conditionalised and can be configured to run
 using different dispatching techniques, of varying sophistication; the most
 efficient dispatching techniques rely on some architecture-specific---but not
 VM-specific---assembly support already included in this software; every
-dispatching model but one also relies on GNU C extensions.
+dispatch but one also relies on GNU C extensions.
 
 As a fallback case, in the interest of portability, one dispatching technique is
 provided, switch dispatching, requiring nothing more than standard C.
