--- a/README
+++ b/README
@@ -77,3 +77,18 @@ About the author
 
 GNU Jitter was written by Luca Saiu.  His personal web site, which includes
 contact information, is http://ageinghacker.net .
+
+
+About compact copyright notices
+===============================
+
+A copyright notice specifying two years saparated by a dash, for example as in
+"2019-2021", is intended as an abbreviation of a notice specifying every year in
+the range, inclusive.  For example
+  Copyright (C) 2016-2020 Foo
+is an abbreviation of
+  Copyright (C) 2016, 2017, 2018, 2020 Foo
+Abbreviated notices may be combined, for example in
+  Copyright (C) 2014-2016, 2018, 2020-2022 Foo
+which is an abbreviation of
+  Copyright (C) 2014, 2015, 2016, 2018, 2020, 2021, 2022 Foo
