--- a/doc/jitter.texi
+++ b/doc/jitter.texi
@@ -1,7 +1,7 @@
 \input texinfo.tex @c This is -*- Texinfo -*-.
 
 @c This file is part of the GNU Jitter manual.
-@c Copyright (C) 2017, 2019, 2020, 2021  Luca Saiu
+@c Copyright (C) 2017, 2019, 2020, 2021, 2022  Luca Saiu
 @c Written by Luca Saiu
 
 @c Permission is granted to copy, distribute and/or modify this
